syntax = "proto3";
import "google/protobuf/timestamp.proto";
package remote_schema;
option go_package = ".;remote_schema";
enum ShutdownType {
  E_UNKNOWN = 0;
  // E=>通用
  E_LOGOFF = 1;  // 注销当前用户
  E_FORCE_SHUTDOWN = 2;  // 强制关闭所有应用程序并关机 在Windows上即 (EWX_SHUTDOWN | EWX_FORCE)
  E_FORCE_REBOOT = 3;  // 强制关闭所有应用程序并重启 在Windows上即(EWX_REBOOT | EWX_FORCE)

  //EWX => Windows 专有
  EWX_SHUTDOWN = 4;  // 关机但不关闭电源
  EWX_REBOOT = 5;  // 重启计算机
  EWX_POWEROFF = 6;  // 关机并关闭电源
  EWX_HYBRID_SHUTDOWN = 7;  // 混合关机

  EWX_FORCE_POWEROFF = 8;  // 强制关闭所有应用程序并关机同时关闭电源 (EWX_POWEROFF | EWX_FORCE)
  EWX_REBOOT_RESTARTAPPS = 9;  // 重启计算机并重启应用程序 (EWX_REBOOT | EWX_RESTARTAPPS)
  EWX_FORCE_REBOOT_RESTARTAPPS = 10;  // 强制关闭应用程序后重启并重启应用程序 (EWX_REBOOT | EWX_FORCE | EWX_RESTARTAPPS)
  EWX_SHUTDOWN_RESTARTAPPS = 11;  // 关机但不关闭电源，关机后重启应用程序 (EWX_SHUTDOWN | EWX_RESTARTAPPS)
  EWX_HYBRID_SHUTDOWN_FORCE = 12;  // 混合关机并强制关闭应用程序 (EWX_HYBRID_SHUTDOWN | EWX_FORCE)
  EWX_HYBRID_SHUTDOWN_RESTARTAPPS = 13;  // 混合关机并重启应用程序 (EWX_HYBRID_SHUTDOWN | EWX_RESTARTAPPS)
  EWX_HYBRID_SHUTDOWN_FORCE_RESTARTAPPS = 14;  // 混合关机、强制关闭应用程序并重启应用程序 (EWX_HYBRID_SHUTDOWN | EWX_FORCE | EWX_RESTARTAPPS
}
enum MsgType{
  Unknown = 0;
  CommonResponse = 1;
  Unlock = 2;
  LockScreen = 3;
  Shutdown = 4;
  Standby = 5;
  CustomCommand = 6;

}
message UnlockMsg {
  string username = 1;
  string password = 2;
}

message ShutdownMsg {
  ShutdownType type = 1;
}

message CommonResponseMsg {

  int32 code = 1;
  string msg = 2;
}

message RemoteMsg{
  MsgType type = 1;
  google.protobuf.Timestamp timestamp = 5;
  oneof msg_body {
    UnlockMsg unlockMsg = 2;
    ShutdownMsg  shutdownMsg = 3;
    CommonResponseMsg responseMsg = 4;
  }
}
